make build job depends on dast

--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -119,7 +119,7 @@ jobs:
           name: zap-report
           path: report_json.json
   build:
-    needs: [test,sonarqube]
+    needs: [test,sonarqube,dast]
     permissions:
         id-token: write    
     runs-on: ubuntu-latest
