--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -34,7 +34,7 @@ jobs:
           path: junit/test-results.xml
   sonarqube:
     needs: test
-    if: true
+    if: false
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -60,6 +60,7 @@ jobs:
        path: sonarqube-report.json
   dast:
     needs: [test]
+    if: false
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -118,6 +119,24 @@ jobs:
         with:
           name: zap-report
           path: report_json.json
+  image-scan:
+    needs: [test]
+    if: true
+    runs-on: ubuntu-latest
+    steps:
+        - name: Scan image
+          uses: anchore/scan-action@v3
+          id: image-scan
+          with:
+            image: ${{ secrets.DOCKERHUB_USERNAME }}/devops-labs:latest
+            fail-build: false
+            output-format: json
+        - name: Upload Image report
+          id: upload-image-report
+          uses: actions/upload-artifact@v4
+          with:
+            name: image-report
+            path: ${{ steps.image-scan.outputs.json }}
   build:
     needs: [test,sonarqube,dast]
     permissions:
