--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -205,7 +205,17 @@ jobs:
           uses: docker/build-push-action@v5
           with:     
             push: true
+            sbom: true
+            provenance: true
             tags: ${{ secrets.DOCKERHUB_USERNAME }}/devops-labs:latest
+        - name: Install Cosign
+          uses: sigstore/cosign-installer@v3.4.0
+        - name: Sign the images with GitHub OIDC Token
+          env: 
+            IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/devops-labs:latest
+          run: |
+            cosign sign --yes ${IMAGE}
+
   submit_results:
     needs: [build]
     if: true
