--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -185,7 +185,7 @@ jobs:
         
         echo "All security gates passed"  
   build:
-    needs: [test,sonarqube,dast,image-scan,security_gate]
+    #needs: [security_gate]
     if: true
     permissions:
         id-token: write    
