--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -139,7 +139,7 @@ jobs:
             path: ${{ steps.image-scan.outputs.json }}
   security_gate:
     needs: [sonarqube, dast, image-scan]
-    if: true
+    if: false
     runs-on: ubuntu-latest
     steps:
     - name: Download sonarqube-report
@@ -185,7 +185,7 @@ jobs:
         
         echo "All security gates passed"  
   build:
-    needs: [test,sonarqube,dast,image-scan,security_gate]
+    needs: [test,sonarqube,dast,image-scan]
     if: true
     permissions:
         id-token: write    
